# VAL

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: AbstractGraph.h  AccumulatedDelta.cpp  AccumulatedDelta.h  Action.cpp  Action.h  Agents.h  Analyser.h  Cascader.h  CausalGraph.cpp  CausalGraph.h  DebugWriteController.cpp  DebugWriteController.h  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  Events.cpp  Events.h  Exceptions.h  FastEnvironment.h  FlexLexer.h  FuncAnalysis.cpp  FuncAnalysis.h  FuncExp.cpp  FuncExp.h  GoalHypSpace.h  HowAnalyser.cpp  HowAnalyser.h  InstPropLinker.cpp  InstPropLinker.h  LPGPTranslator.h  LaTeXSupport.cpp  LaTeXSupport.h  LibLink.cpp  LibLink.h  OptInterface.h  Ownership.cpp  Ownership.h  Partitions.h  PinguPlanGenerator.cpp  (+75 more)
